# volerup

./: .woodpecker.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/: README.md
.github/workflows/: ci.yml
vole-rs/: Cargo.toml  README.md
vole-rs/src/: floating.rs  lib.rs  vole.rs
voleru/: Cargo.toml
voleru/src/: model.rs  view.rs
volerup/: Cargo.toml  README.md
volerup/src/: main.rs  model.rs  update.rs  view.rs
volerup/vhs/: show.tape
